# tagstudio_db

./: .env  .env.example  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.sqlx/: query-0904a8ba04ac75db3487e95aaf442c6b21accb63bc9064b87dc38a0f11c9f524.json  query-1c3dabe16d149a167bdac6432246f617b37e294ec13a2da87dd6e7fd6ad1c5ee.json  query-26ab990cc0f74df29660dd309c27c6dba97563b41fed653ff5aa95fcba7ffa0f.json  query-2998d35c72fb80b75498b23fd62ef46086c77a052e60b8cff5994297ed51dc34.json  query-2bd7bf08d2ce65caf7e25eb50cc79971c0bf0b26781b5bbbdfc7dd6fd31b777a.json  query-402e36bab39ca83846c78de9fbb0ffc9d234f932f4f8f8ca300206730f7e4ba7.json  query-45b8a759baa31e3971ea984ad6f3877790d9e4ec62670159f52e72b5f0f69ef1.json  query-46504c9a74bb3ffd0e6b73bbe0c6aebf7dad63b67127a0dd974b278174cf56a3.json  query-4c9ee7f8aea6cb070acc8ac6508aeb9ca3fd0a93475bd35585a42b807a6c9835.json  query-4f2e1ebb94fe8fc45aca8af1b1de1b3fa8e5928512e09f7fd7f0b5a9642e09f3.json  query-56bc8a334daa8b012b6b8554f3311bbfb8980b8f5239dad62394ab175ed520f2.json  query-5731b78e1d74bbde3e7afd006a8aafde8754b005a05a3c175eb6edb747264b6d.json  query-59b8521c807c56443ef07a060280808f28a41d658eb187ffa5945f2309dc7a03.json  query-5ff1d1b973961e27b2f99c236476f6782fd5c2946a97fc8a0311a9c547c83cb1.json  query-6b343bdf229d8b6808f97584040d01365f2ef4a0238dd23a0a427e62e5e26562.json  query-7038edb0339d5af17e7576b71093cece50faf6812863b1c663cf44dafe0267e2.json  query-88257b136a64d8055f0a54e141ad07cfbec210613e0f586ef2cb74954fc2566b.json  query-907bea67efd0adbc86a823d1c7060a8d8cf37a3fcfdc7d93f5de5d766f45780b.json  query-920d80ea2fe9195d35aa506f31875324c54f3f14faebc2c4ebbda9cdb06c34bc.json  query-96fdff343bc05f5ac654539239b6be930e2fb833bf89e09243872b85d3c6d1a3.json  (+19 more)
src/: error.rs  lib.rs  utils.rs
(+136 files in other folders)
