[package]
name = "tagstudio_db"
description = "Rust bindings for TagStudio databases"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["RustyNova"]
license = "GPL-3.0-or-later"
keywords = ["sqlx", "database", "TagStudio", "development"]
repository = "https://github.com/RustyNova016/tagstudio_db"

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = [ "runtime-tokio", "sqlite", "derive", "macros", "chrono"] }
futures = "0.3.31"
thiserror = "2.0.12"
chrono = "0.4.41"
deadpool = "0.12.2"
tracing = "0.1.41"
streamies = "0.2.2"

[dev-dependencies]
tokio = { version = "1.47.0", features = ["full"] }

[features]
default = ["fs", "test_utils"]
fs = []
test_utils = []
