[package]
name = "tagstudio_db"
description = "Rust bindings for TagStudio databases"
version = "0.4.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["RustyNova"]
license = "GPL-3.0-or-later"
keywords = ["sqlx", "database", "TagStudio", "development"]
repository = "https://github.com/RustyNova016/tagstudio_db"

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = [ "runtime-tokio", "sqlite", "derive", "macros", "chrono"] }
futures = "0.3.31"
thiserror = "2.0.12"
chrono = "0.4.41"
deadpool = "0.12.2"
tracing = "0.1.41"
streamies = "0.2.2"
nom = "8.0.0"
nom-language = "0.1.0"
snafu = "0.8.9"
#nom-supreme = "0.8.0" <- Needs updating to nom 0.8.0
itertools = "0.14.0"
serde_json = "1.0.145"
trash = {version = "5.2.3", default-features = false, optional = true}

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }

[features]
default = ["fs", "test_utils"]
fs = ["trash"]
test_utils = []

